# Rocket

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Init.py  InitGui.py  LICENSE  LICENSE-PyAtmos  README.md  Rocket.dox  Rocket.py  RocketGui.py  TESTING.md  TestRocketApp.py  TestRocketGui.py  importORK.py  importRASAero.py  importRKT.py  package.xml
.github/workflows/: codeql.yml
Analyzers/: FinFlutter.py
Analyzers/pyatmos/: LICENSE.txt  README.md  __init__.py  class_atmos.py
App/: BodyTubeShapeHandler.py  BulkheadShapeHandler.py  CenteringRingShapeHandler.py  ClusterConfiguration.py  CmdFin.py  CmdNoseCone.py  CmdTransition.py  ComponentAssembly.py  ComponentChangeEvent.py  ConeShapeHandler.py  Constants.py  Coordinate.py  EllipseShapeHandler.py  Exceptions.py  ExternalComponent.py  FeatureBase.py  FeatureBodyTube.py  FeatureBulkhead.py  FeatureCenteringRing.py  FeatureEngineBlock.py  FeatureFin.py  FeatureFinCan.py  FeatureInnerTube.py  FeatureLaunchLug.py  FeatureNoseCone.py  FeatureParallelStage.py  FeaturePod.py  FeatureRailButton.py  FeatureRailGuide.py  FeatureRocket.py  FeatureStage.py  FeatureTransition.py  FeatureTubeCoupler.py  FinCanShapeHandler.py  FinCanTrapezoidShapeHandler.py  FinEllipseShapeHandler.py  FinShapeHandler.py  FinSketchShapeHandler.py  FinTrapezoidShapeHandler.py  FlightConfiguration.py  (+56 more)
App/Component/: AxialStageComponent.py  BodyTubeComponent.py  Component.py  NoseconeComponent.py  RocketComponent.py
App/Importer/: BodyTubeElement.py  CenteringRingElement.py  ComponentElement.py  EllipticalFinset.py  EllipticalFinsetElement.py  FinsetElement.py  FreeformFinset.py  FreeformFinsetElement.py  InnerTubeElement.py  LaunchLugElement.py  NoseElement.py  OpenRocket.py  RadiusRingComponentElement.py  RingComponentElement.py  SaxElement.py  StageElement.py  StructuralComponentElement.py  SubElement.py  SymmetricComponentElement.py  TransitionElement.py  TrapezoidalFinset.py  TrapezoidalFinsetElement.py  TubeFinset.py  TubeFinsetElement.py
App/Parts/: BodyTube.py  Bulkhead.py  CenteringRing.py  Component.py  Coupler.py  EngineBlock.py  Exceptions.py  LaunchLug.py  Material.py  NoseCone.py  Parachute.py  PartDatabase.py  PartDatabaseOrcImporter.py  Streamer.py  Transition.py  Utilities.py
App/ShapeHandlers/: BodyTubeShapeHandler.py  BulkheadShapeHandler.py  CenteringRingShapeHandler.py  FinCanShapeHandler.py  FinEllipseShapeHandler.py  FinShapeHandler.py  FinSketchShapeHandler.py  FinTrapezoidShapeHandler.py  FinTriangleShapeHandler.py  FinTubeShapeHandler.py  InnerTubeShapeHandler.py  LaunchLugShapeHandler.py  NoseBluntedConeShapeHandler.py  NoseBluntedOgiveShapeHandler.py  NoseConeShapeHandler.py  NoseEllipseShapeHandler.py  NoseHaackShapeHandler.py  NoseOgiveShapeHandler.py  NoseParabolicShapeHandler.py  NosePowerShapeHandler.py  NoseSecantOgiveShapeHandler.py  NoseShapeHandler.py  RailButtonShapeHandler.py  RailGuideShapeHandler.py  TransitionConeShapeHandler.py  TransitionEllipseShapeHandler.py  TransitionHaackShapeHandler.py  TransitionOgiveShapeHandler.py  TransitionParabolicShapeHandler.py  TransitionPowerShapeHandler.py  TransitionShapeHandler.py
App/Tools/: ImportDatabase.py  Utilities.py
App/events/: ComponentChangeEvent.py
App/fem/: Gmsh.py
App/interfaces/: BoxBounded.py  ChangeSource.py  Clusterable.py  Coaxial.py  ComponentChangeListener.py  Instanceable.py  LineInstanceable.py  RadialParent.py  RingInstanceable.py  StateChangeListener.py
App/motor/: FileIO.py  Grain.py  GrainHandler.py  Motor.py  MotorConfig.py  Nozzle.py  Propellant.py  geometry.py  motor_old.py  propellant_old.py
App/position/: AngleMethod.py  AnglePositionable.py  AxialMethod.py  AxialPositionable.py  Distance.py  DistanceMethod.py  RadialMethod.py  RadiusMethod.py  RadiusPositionable.py
App/util/: BoundingBox.py  Coordinate.py  Finish.py  MathUtil.py  ReferenceType.py  Transformation.py  UniqueID.py
Gui/: CmdNoseCone.py  CmdTransition.py  ViewNoseCone.py  ViewTransition.py
Resources/: Rocket.qrc
Resources/Material/: Acrylic-cast-bulk.FCMat  Acrylic.FCMat  Aluminum-2024-bulk.FCMat  Aluminum-7075-bulk.FCMat  (+514 more)
Rocket/: ClusterConfiguration.py  ComponentAssembly.py  Constants.py  Exceptions.py  ExternalComponent.py  FeatureBodyTube.py  FeatureBulkhead.py  FeatureCenteringRing.py  FeatureEngineBlock.py  FeatureFin.py  FeatureFinCan.py  FeatureGreebly.py  FeatureInnerTube.py  FeatureLaunchLug.py  FeatureNoseCone.py  FeatureParallelStage.py  FeaturePod.py  FeatureRailButton.py  FeatureRailGuide.py  FeatureRetainer.py  FeatureRingtail.py  FeatureRocket.py  FeatureStage.py  FeatureTransition.py  FeatureTubeCoupler.py  FlightConfiguration.py  FlightConfigurationId.py  InternalComponent.py  Material.py  PodInfo.py  RadiusRingComponent.py  RingComponent.py  RocketComponent.py  RocketComponentShapeless.py  ShapeLaunchLug.py  ShapeRailButton.py  SymmetricComponent.py  ThicknessRingComponent.py  Tube.py  Utilities.py
Tests/: RegresionTest.FCMacro  TestBodyTube.py  TestBulkhead.py  TestCenteringRing.py  TestFinCans.py  TestFins.py  TestFlutter.py  TestGeometry.py  TestMotor.py  TestMoves.py  TestNoses.py  TestNozzle.py  TestPropellant.py  TestRegressions.py  TestTransition.py
Ui/: CmdBodyTube.py  CmdBulkhead.py  CmdCalcBlackPowder.py  CmdCalcParachute.py  CmdCalcThrustToWeight.py  CmdCalcVentHoles.py  CmdCenteringRing.py  CmdEditTree.py  CmdFin.py  CmdFinCan.py  CmdFlutterAnalysis.py  CmdLaunchGuides.py  CmdMaterialEditor.py  CmdNoseCone.py  CmdOpenMotor.py  CmdParachute.py  CmdParachuteDesigner.py  CmdParachuteGore.py  CmdParallelStage.py  CmdPartsDatabase.py  CmdPod.py  CmdRocket.py  CmdSketcher.py  CmdStage.py  CmdTransition.py  DialogBlackPowder.py  DialogCFD.py  DialogCFD.ui  DialogFinFlutter.py  DialogFinFlutter.ui  DialogLookup.py  DialogLookup.ui  DialogMaterialMapping.py  DialogParachute.py  DialogScaling.py  DialogTestUI.py  DialogTestUI.ui  DialogThrustToWeight.py  DialogUtilities.py  DialogVentHoles.py  (+55 more)
util/: ImportDatabase.py  compileTranslations.sh  updateTranslations.py  updatecrowdin.py  updatets.py  ~translation_status.txt
(+1560 files in other folders)
