<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>Rocket</name>
  <description>A workbench for designing model rockets.</description>
  <version>4.0.0</version>
  <date>2024-01-18</date>
  <maintainer email="dcarter@davidcarter.ca">David Carter</maintainer>
  <license file="LICENSE">LGPL-2.1-or-later</license>
  <url type="repository" branch="master">https://github.com/davesrocketshop/Rocket</url>
  <icon>Resources/icons/RocketWorkbench.svg</icon>
  <freecadmin>0.22</freecadmin>

  <content>
    <workbench>
      <classname>RocketWorkbench</classname>
      <subdirectory>./</subdirectory>
      <tag>rocket</tag>

      <!-- Required by the atmospheric model -->
      <depend>numpy</depend>

      <depend>Fem</depend>
      <depend>Material</depend>
      <depend>matplotlib</depend>

      <!-- Optional install of 3rd-party CfdOF workbench if utilizing CFD studies -->
      <depend type="addon" optional="true">CfdOF</depend>
    </workbench>
  </content>

</package>
